<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simpletouristapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_domestic"
        android:name="com.example.simpletouristapp.ui.domestic.DomesticFragment"
        android:label="@string/menu_domestic"
        tools:layout="@layout/domestic_fragment" />

    <fragment
        android:id="@+id/nav_foreign"
        android:name="com.example.simpletouristapp.ui.foreign.ForeignFragment"
        android:label="@string/menu_foreign"
        tools:layout="@layout/foreign_fragment" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.simpletouristapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/news_fragment" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.simpletouristapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" />
</navigation>